# MobileOperators

./: CMakeLists.txt  Main.qml  README.md  TextRectangle.qml  main.cpp
Data/Entities/: Country.hpp  Operator.hpp
Data/Storage/: DataStorage.cpp  DataStorage.hpp
Data/Structures/: IndexedMap.hpp
Model/: CombinedModel.cpp  CombinedModel.hpp
SQL/: SqlManager.cpp  SqlManager.hpp
UI/: OperatorDialog.qml  TextRectangle.qml
UI/Common/: ReliableImage.qml
UI/Dialogs/: OperatorAddDialog.qml  OperatorEditDialog.qml
UI/TreeElements/: CountryComponent.qml  OperatorComponent.qml
ViewModel/: CombinedModel.cpp  CombinedModel.hpp
